--- a/index.html
+++ b/index.html
@@ -3,21 +3,85 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Aguillar Family Wine Festival</title>
+  <link rel="stylesheet" type="text/css" href="reset.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
-
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <header>
+    <h1>Annual Aguillar Family Wine Festival</h1>
+  </header>
+  
+  <div class="container">
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2">
+                  <h1>Wine Festival Schedule</h1>
+                  </th>
+            </tr>
+            <tr>
+              <th>
+                <h2>Time</h2>
+              </th>
+              <th>
+                <h2>Event</h2>
+              </th>
+            </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="left">
+              <h3>12:00 PM</h3>
+            </td>
+            <td>
+              <h3>Welcome Reception</h3>
+            </td>
+          </tr>
+          <tr>
+            <td class="left">
+              <h3>01:00 PM</h3>
+            </td>
+            <td>
+              <h3>Storytelling & Tasting</h3>
+            </td>
+          </tr>
+          <tr>
+            <td class="left">
+              <h3>02:00 PM</h3>
+            </td>
+            <td>
+              <h3>Wine Luncheon</h3>
+            </td>
+          </tr>
+          <tr>
+            <td class="left">
+              <h3>03:00 PM</h3>
+            </td>
+            <td>
+              <h3>Aguillar Family Wines</h3>
+            </td>
+          </tr>
+          <tr>
+            <td class="left">
+              <h3>04:00 PM</h3>
+            </td>
+            <td>
+              <h3>Wine & Cheese Tasting</h3>
+            </td>
+          </tr>
+        </tbody>
+    </table>
+   
+  </div>
+  
+  <footer>
+    <h3>Contact</h3>
+    <h3>Location</h3>
+    <h3>Privacy Policy</h3>
+  </footer>
 </body>
 
 </html>
